--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 	<script src="app.js"></script>
 	<link rel="shortcut icon" href="./otherPhotos/favicon1.ico"/>
 	<link rel="stylesheet" type="text/css" href="website.css">
-	<link href='https://fonts.googleapis.com/css?family=Lato:400,700|Libre+Baskerville:400italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<nav id="nav_bar">
@@ -36,7 +35,7 @@
 			<img id="icon_of_me"src="http://i.imgur.com/dVg6YIY.png?1" alt="icon of me.">
 			<div class="lander_text">
 				<h1 id="lander_greeting1">HELLO!</h1>
-				<h2 id="lander_greeting2">I'm Connor, a Web Engineer and Graphic Designer</h2>
+				<h2 id="lander_greeting2">I'm Connor, a Web Engineer and Graphic Designer. This is a cartoon I made of myself. I do have eyes and other facial features IRL.</h2>
 			</div>	
 		</div>
 	</div>
@@ -45,7 +44,7 @@
 	</div>
 	<div class="third_lander_section">
 		<img src="http://i.imgur.com/eg6YKkM.png?1" title="I made dis" alt="Flat Cartoon of New York"/>
-		<p id="third_lander_paragraph">So many amazing application ideas executed with poor design go to waste. I hope to make sure that happens a bit less, as I integrate design with engineering to showcase an idea to its fullest ability.<br><br>Take a look throughout my site to discover more about my work.</p>
+		<p id="third_lander_paragraph">So many amazing application ideas executed with poor design go to waste. I hope to make sure that happens a bit less, as I integrate design with engineering to showcase an idea to its fullest ability. I'm now realizing this caption has nothing to do with the above cartoon, but it looks nice and I like it!<br><br>Check out my portfolio and resume to get a better guage of my presence in design and engineering.</p>
 	</div>
 	<footer>
 		<div id="footer_contact_box">
