--- a/portfolio.html
+++ b/portfolio.html
@@ -32,13 +32,13 @@
 		<a id="contact_link">Contact</a>
 	</nav>
 	<div id="porfolio_container">
-		<h2>Engineering Work:</h2>
+		<p class="text_side_bars"><span class="text_side_bars_span">ENGINEERING WORK</span></p>
 		<div class="preview_image_container">
 			<a href="iphone.html"><img class="preview_image" src="imgs/iphone-preview-website.png" alt="iPhone Replica"></a>
 			<a href="ellevest.html"><img class="preview_image" src="imgs/ellevest-preview-website.png" alt="Ellevest Project Preview" /></a>
 			<a href="letsmeet.html"><img class="preview_image" src="imgs/letsmeet-preview-website.png" alt="Lets Meet Preview" /></a>
 		</div>
-		<h2>Design Work:</h2>
+		<p class="text_side_bars"><span class="text_side_bars_span">DESIGN WORK</span></p>
 		<div class="preview_image_container">
 			<a href="trilogy.html"><img class="preview_image" src="imgs/git-preview-website.png" alt="Git Project Preview"/></a>
 			<a href="baruch.html"><img class="preview_image" src="imgs/baruch-preview-website-03.png" alt="Baruch Project Preview"/></a>
