--- a/portfolio.html
+++ b/portfolio.html
@@ -38,6 +38,7 @@
 			<a href="ellevest.html"><img class="preview_image" src="imgs/ellevest-preview-website.png" alt="Ellevest Project Preview" /></a>
 			<a href="letsmeet.html"><img class="preview_image" src="imgs/letsmeet-preview-website.png" alt="Lets Meet Preview" /></a>
 		</div>
+		<div class="fifty_spacer"></div>
 		<p class="text_side_bars"><span class="text_side_bars_span">DESIGN WORK</span></p>
 		<div class="preview_image_container">
 			<a href="trilogy.html"><img class="preview_image" src="imgs/git-preview-website.png" alt="Git Project Preview"/></a>
