--- a/letsmeet.html
+++ b/letsmeet.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Engineering and design work done by Connor for an application intended to help people find a central meeting location.">
 	<meta name="author" content="Connor Rowland">
+	<meta name="keywords" content="web developer, nyc, developer, manhattan, new york, connor rowland, graphic designer, developer new york, new york web developer, new york web engineer, web developer new york, web engineer, Connor John Rowland, baruch college">
 	<!-- Scripts and Links -->
 	<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
