Adding new sitemap

--- a/ellevest.html
+++ b/ellevest.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Connor Rowland | Web Engineer</title>
+	<title>Connor Rowland | Web Engineer and Graphic Designer in New York, NY</title>
 	<!-- Meta Tags -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Engineering work done by Connor for Ellevest.">
+	<meta name="description" content="Web Engineering work done by me, Connor, for a women's investing platform, Ellevest, based in New York City.">
 	<meta name="author" content="Connor Rowland">
 	<meta name="keywords" content="web developer, nyc, developer, manhattan, new york, connor rowland, graphic designer, developer new york, new york web developer, new york web engineer, web developer new york, web engineer, Connor John Rowland, baruch college">
 	<!-- Scripts and Links -->
