--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	</div>
 	<div class="third_lander_section">
 		<img src="http://i.imgur.com/eg6YKkM.png?1" title="I made dis" alt="Flat Cartoon of New York"/>
-		<p id="third_lander_paragraph">So many amazing application ideas executed with poor design go to waste. I hope to make sure that happens a bit less, as I integrate design with engineering to showcase an idea to its fullest ability. I'm now realizing this caption has nothing to do with the above cartoon, but it looks nice and I like it!<br><br>Check out my portfolio and resume to get a better guage of my presence in design and engineering.</p>
+		<p id="third_lander_paragraph">So many amazing application ideas executed with poor design go to waste. I hope to make sure that happens a bit less, as I integrate design with engineering to showcase an idea to its fullest ability. I'm now realizing this caption has nothing to do with the above cartoon, but it looks nice and I like it!<br><br>Check out my <a class="underline_link" href="http://connorrowland.github.io/portfolio.html" title="Connor Rowland Design and Engineering Portfolio">portfolio</a> and <a class="underline_link" href="http://connorrowland.github.io/imgs/resume.pdf" title="Connor Rowland Design and Engineering Resume">resume</a> to get a better guage of my presence in design and engineering.</p>
 	</div>
 	<footer>
 		<div id="footer_contact_box">
