--- a/portfolio.html
+++ b/portfolio.html
@@ -33,14 +33,15 @@
 		<a id="contact_link">Contact</a>
 	</nav>
 	<div id="porfolio_container">
-		<p class="text_side_bars"><span class="text_side_bars_span">ENGINEERING WORK</span></p>
+		<p>ENGINEERING WORK</p>
 		<div class="preview_image_container">
+			<a href="wresq.html"><img class="preview_image" src="imgs/wresq-preview-website.png" alt="Law Firm Website Preview"></a>
 			<a href="iphone.html"><img class="preview_image" src="imgs/iphone-preview-website.png" alt="iPhone Replica"></a>
 			<a href="ellevest.html"><img class="preview_image" src="imgs/ellevest-preview-website.png" alt="Ellevest Project Preview" /></a>
 			<a href="letsmeet.html"><img class="preview_image" src="imgs/letsmeet-preview-website.png" alt="Lets Meet Preview" /></a>
 		</div>
 		<div class="fifty_spacer"></div>
-		<p class="text_side_bars"><span class="text_side_bars_span">DESIGN WORK</span></p>
+		<p>DESIGN WORK</p>
 		<div class="preview_image_container">
 			<a href="trilogy.html"><img class="preview_image" src="imgs/git-preview-website.png" alt="Git Project Preview"/></a>
 			<a href="baruch.html"><img class="preview_image" src="imgs/baruch-preview-website-03.png" alt="Baruch Project Preview"/></a>
