Rollout new lander

--- a/blog.html
+++ b/blog.html
@@ -40,10 +40,10 @@
 			<p id="posts"><span id="posts_span">POSTS</span></p>
 
 			<div class="feature_post">
-				<a class="feature_blog_post_title" title="How 1 Link Drastically Changed My Site" href="how-1-link.html">How 1 Link Drastically Changed My Site</a>	
+				<a class="feature_blog_post_title" title="How 1 Link Drastically Changed My Site" href="posts/how-1-link.html">How 1 Link Drastically Changed My Site</a>	
 			</div>
 			<div class="non_feature_post">
-				<a class="non_feature_blog_post_title" title="5 Things I Learned From Freelancing" href="5-things-learned-from-freelancing.html">5 Things I Learned From Freelancing</a>
+				<a class="non_feature_blog_post_title" title="5 Things I Learned From Freelancing" href="posts/5-things-learned-from-freelancing.html">5 Things I Learned From Freelancing</a>
 			</div>
 			<div class="post_filler">
 				
