updating nav bars

--- a/blog.html
+++ b/blog.html
@@ -25,12 +25,12 @@
 </head>
 <body class="blog_body">
 	<div class="blog_container">
-		<nav id="nav_bar">
-			<a href="index.html">Home</a>
-			<a href="portfolio.html">Portfolio</a>
-			<a href="imgs/resume.pdf">Resume</a>
-			<a href="contact.html">Contact</a>
-		</nav>
+	<nav id="nav_bar">
+		<a href="index.html">Home</a>
+		<a href="http://connorrowland.github.io/index.html#portfolio_container_new">Portfolio</a>
+		<a href="imgs/resume.pdf">Resume</a>
+		<a id="contact_link">Contact</a>
+	</nav>
 		<div class="welcome_container">
 			<h1>Welcome to M'Blog!</h1>
 		</div>
