--- a/trilogy.html
+++ b/trilogy.html
@@ -31,7 +31,7 @@
 <body>
 	<nav id="nav_bar">
 		<a href="index.html">Home</a>
-		<a href="portfolio.html">Portfolio</a>
+		<a href="http://connorrowland.github.io/index.html#portfolio_container_new">Portfolio</a>
 		<a href="imgs/resume.pdf">Resume</a>
 		<a id="contact_link">Contact</a>
 	</nav>
