new lander page

--- a/index.html
+++ b/index.html
@@ -32,26 +32,75 @@
 		<a id="contact_link">Contact</a>
 	</nav>
 	<div class="lander_container_new">
-		<img id="lander_city" src="http://i.imgur.com/eg6YKkM.png?1" title="I made dis" alt="Flat Cartoon of New York"/>
-		<h1 id="lander_greeting1_new">HELLO!</h1>
-		<h3 id="lander_greeting2_new">I'm Connor, a Web Engineer and Graphic Designer based in New York. I love taking part in work where I can blend meaningful design with well-written code to build great things. Check out my portfolio below, and my <a class="underline_link" href="http://connorrowland.github.io/imgs/resume.pdf" title="Connor Rowland Design and Engineering Resume">resume</a> to get a better guage of my presence in design and engineering.</p></h3>
+		<div class="vertical_center">
+			<h1 id="lander_greeting1_new">HELLO!</h1>
+			<h3 id="lander_greeting2_new">I'm Connor, a Web Engineer and Graphic Designer based in New York. I love taking part in work where I can blend meaningful design with well-written code to build great things. Check out my portfolio below, and my <a class="underline_link" href="http://connorrowland.github.io/imgs/resume.pdf" title="Connor Rowland Design and Engineering Resume">resume</a> to get a better guage of my presence in design and engineering.</p></h3>
+		</div>
 	</div>
 	<div id="portfolio_container_new">
-		<p>ENGINEERING WORK</p>
-		<div class="preview_image_container">
-			<a href="wresq.html"><img class="preview_image" src="imgs/wresq-preview-website.png" alt="Law Firm Website Preview"></a>
-			<a href="iphone.html"><img class="preview_image" src="imgs/iphone-preview-website.png" alt="iPhone Replica"></a>
-			<a href="ellevest.html"><img class="preview_image" src="imgs/ellevest-preview-website.png" alt="Ellevest Project Preview" /></a>
-			<a href="letsmeet.html"><img class="preview_image" src="imgs/letsmeet-preview-website.png" alt="Lets Meet Preview" /></a>
-		</div>
-		<div class="fifty_spacer"></div>
-		<p>DESIGN WORK</p>
-		<div class="preview_image_container">
-			<a href="trilogy.html"><img class="preview_image" src="imgs/git-preview-website.png" alt="Git Project Preview"/></a>
-			<a href="baruch.html"><img class="preview_image" src="imgs/baruch-preview-website-03.png" alt="Baruch Project Preview"/></a>
-			<a href="magazines.html"><img class="preview_image" src="imgs/magazine-preview-website-04.png" alt="Magazine Project Preview"/></a>
-			<a href="pride.html"><img class="preview_image" src="imgs/pride-preview-website.png" alt="Pride Project Preview"/></a>
-		</div>
+		<a href="wresq.html" title="">
+			<div class="portfolio_preview_updates proj1">
+				<div class="portfolio_preview_bio">
+					<h2>Law Firm Website</h2>
+					<p>Engineering and design work done for a law firm based in NYC</p>
+				</div>
+			</div>
+		</a>
+		<a href="iphone.html" title="">
+			<div class="portfolio_preview_updates proj2">
+				<div class="portfolio_preview_bio">
+					<h2>iPhone Reproduction</h2>
+					<p>An interactive iPhone made with HTML, CSS, and JavaScript</p>
+				</div>
+			</div>
+		</a>
+		<a href="ellevest.html" title="">
+			<div class="portfolio_preview_updates proj3">
+				<div class="portfolio_preview_bio">
+					<h2>Ellevest</h2>
+					<p>Freelance Engineering work done for a women's investing platform</p>
+				</div>
+			</div>
+		</a>
+		<a href="letsmeet.html" title="">
+			<div class="portfolio_preview_updates proj4">
+				<div class="portfolio_preview_bio">
+					<h2>Let's Meet</h2>
+					<p>Engineering Project made at General Assembly in NYC</p>
+				</div>
+			</div>
+		</a>
+		<a href="trilogy.html" title="">
+			<div class="portfolio_preview_updates proj5">
+				<div class="portfolio_preview_bio">
+					<h2>Git/GitHub Graphics</h2>
+					<p>Various graphics made to explain Git/Github processes</p>
+				</div>
+			</div>
+		</a>
+		<a href="baruch.html" title="">
+			<div class="portfolio_preview_updates proj6">
+				<div class="portfolio_preview_bio">
+					<h2>Baruch College Play</h2>
+					<p>A poster design made for a Baruch College play</p>
+				</div>
+			</div>
+		</a>
+		<a href="magazines.html" title="">
+			<div class="portfolio_preview_updates proj7">
+				<div class="portfolio_preview_bio">
+					<h2>Magazine Spreads</h2>
+				</div>
+			</div>
+		</a>
+		<a href="pride.html" title="">
+			<div class="portfolio_preview_updates proj8">
+				<div class="portfolio_preview_bio">
+					<h2>Pride T Shirt</h2>
+					<p>A T shirt design I made for the 2015 NYC Pride March</p>
+				</div>
+			</div>
+		</a>
 	</div>
 
 	<footer>
