fix of portfolio pages alignment

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 		</a>
 	</div>
 
-	<footer>
+	<footer id="home_footer">
 		<div id="footer_contact_box">
 			<img id="footer_envelope" src="http://i.imgur.com/d5mN9lB.png?2" title="I designed this!" alt="Flat Envelope"/>
 			<h1>Say Hi!</h1>
