--- a/baruch.html
+++ b/baruch.html
@@ -54,7 +54,7 @@
 		<div id="footer_lower_box">
 			<nav id="footer_nav_bar">
 				<a href="index.html">Home</a>
-				<a href="portfolio.html">Portfolio</a>
+				<a id="portfolio_link">Portfolio</a>
 				<a href="imgs/resume.pdf">Resume</a>
 			</nav>
 			<div id="footer_links">
