--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	</nav>
 	<div class="lander_container_new">
 		<div class="vertical_center">
-			<h1 id="lander_greeting1_new">HELLO!</h1>
+			<h1 id="lander_greeting1_new">HEY!</h1>
 			<h3 id="lander_greeting2_new">I'm Connor, a Web Engineer and Graphic Designer based in New York. I love taking part in work where I can blend meaningful design with well-written code to build great things. Check out my portfolio below, and my <a class="underline_link" href="http://connorrowland.github.io/imgs/resume.pdf" title="Connor Rowland Design and Engineering Resume">resume</a> to get a better guage of my presence in design and engineering.</p></h3>
 		</div>
 	</div>
@@ -107,7 +107,7 @@
 		<div id="footer_contact_box">
 			<img id="footer_envelope" src="http://i.imgur.com/d5mN9lB.png?2" title="I designed this!" alt="Flat Envelope"/>
 			<h1>Say Hi!</h1>
-			<h2>Or other things.</h2>
+			<p>Or other things.</p>
 			<button id="email_me_button"><a href="mailto:cjr6734@yahoo.com">Email Me!</a></button>
 		</div>
 		<div id="footer_lower_box">
