--- a/iphone.html
+++ b/iphone.html
@@ -71,7 +71,7 @@
 		<div id="footer_contact_box">
 			<img id="footer_envelope" src="http://i.imgur.com/d5mN9lB.png?2" title="I designed this!" alt="Flat Envelope"/>
 			<h1>Say Hi!</h1>
-			<h2>Or other things.</h2>
+			<p>Or other things.</p>
 			<button id="email_me_button"><a href="mailto:cjr6734@yahoo.com">Email Me!</a></button>
 		</div>
 		<div id="footer_lower_box">
