--- a/letsmeet.html
+++ b/letsmeet.html
@@ -41,13 +41,13 @@
 			</div>
 			<div class="right_items">
 				<div class="portfolio_text_box align_right">
-					<p class="italic_lato">When</p>
+					<p class="italic_courier">When</p>
 					<p>
 						Summer 2015.
 					</p>
 				</div>
 				<div class="portfolio_text_box align_right">
-					<p class="italic_lato">What it is</p>
+					<p class="italic_courier">What it is</p>
 					<p>
 						<a class="underline_link" target="_blank" href="https://letsmeethalfway.herokuapp.com/">Let’s Meet</a> is an application for users to find a central meeting place between two locations. Once Let’s Meet finds that location, it provides the user with location suggestions based on the user's desired activity, and corresponding Yelp reviews. So if you and a friend want to meet for coffee, and you’re in the East Village and your friend is up in Midtown, you’d receive suggestions for coffee shops around 25th street.
 					</p>
@@ -55,13 +55,13 @@
 			</div>
 			<div class="left_items">
 				<div class="portfolio_text_box align_left">
-					<p class="italic_lato top_of_container_text">What I Did</p>
+					<p class="italic_courier top_of_container_text">What I Did</p>
 					<p>
 						My role on the Let’s Meet team was to oversee the general design and implementation of the application’s Front-End. I chose a Material Design approach, as I felt it was the most user freindly for the project.
 					</p>
 				</div>
 				<div class="portfolio_text_box portfolio_skill_list align_left">
-					<p class="italic_lato">Skills Used</p>
+					<p class="italic_courier">Skills Used</p>
 					<h2>Ruby</h2>
 					<h2>Rails</h2>
 					<h2>Backbone.Js</h2>
@@ -95,7 +95,7 @@
 		<div id="footer_contact_box">
 			<img id="footer_envelope" src="http://i.imgur.com/d5mN9lB.png?2" title="I designed this!" alt="Flat Envelope"/>
 			<h1>Say Hi!</h1>
-			<h2>Or other things.</h2>
+			<p>Or other things.</p>
 			<button id="email_me_button"><a href="mailto:cjr6734@yahoo.com">Email Me!</a></button>
 		</div>
 		<div id="footer_lower_box">
