--- a/blog.html
+++ b/blog.html
@@ -26,19 +26,12 @@
 <body class="blog_body">
 	<div class="blog_container">
 	<nav id="nav_bar">
-		<a href="index.html">Home</a>
-		<a href="http://connorrowland.github.io/index.html#portfolio_container_new">Portfolio</a>
+		<a id="portfolio_link">Portfolio</a>
 		<a href="imgs/resume.pdf">Resume</a>
 		<a id="contact_link">Contact</a>
 	</nav>
-		<div class="welcome_container">
-			<h1>Welcome to M'Blog!</h1>
-		</div>
-		<div class="fifty_spacer"></div>
-		
+	<div class="fifty_spacer"></div>
 		<div class="posts_container">
-			<p id="posts"><span id="posts_span">POSTS</span></p>
-
 			<div class="feature_post">
 				<a class="feature_blog_post_title" title="How 1 Link Drastically Changed My Site" href="posts/how-1-link.html">How 1 Link Drastically Changed My Site</a>	
 			</div>
@@ -54,13 +47,13 @@
 		<div id="footer_contact_box">
 			<img id="footer_envelope" src="http://i.imgur.com/d5mN9lB.png?2" title="I designed this!" alt="Flat Envelope"/>
 			<h1>Say Hi!</h1>
-			<h2>Or other things.</h2>
+			<p>Or other things.</p>
 			<button id="email_me_button"><a href="mailto:cjr6734@yahoo.com">Email Me!</a></button>
 		</div>
 		<div id="footer_lower_box">
 			<nav id="footer_nav_bar">
 				<a href="index.html">Home</a>
-				<a href="portfolio.html">Portfolio</a>
+				<a id="portfolio_link">Portfolio</a>
 				<a href="imgs/resume.pdf">Resume</a>
 			</nav>
 			<div id="footer_links">
