--- a/wresq.html
+++ b/wresq.html
@@ -37,14 +37,14 @@
 		<div class="portfolio_inner_text">
 			<div class="right_items">
 				<div class="portfolio_text_box align_right">
-					<p class="italic_lato">When</p>
+					<p class="italic_courier">When</p>
 					<p>
 						Fall 2015 &ndash; Present.
 					</p>
 				</div>
 				
 				<div class="portfolio_text_box align_right">
-					<p class="italic_lato">What it is</p>
+					<p class="italic_courier">What it is</p>
 					<p>
 						William Ricigliano, P.C. is a Personal Injury Law Firm in Manhattan I have a special connection to. This is where I had my first job when I was 16 as a summer intern, where I did everything from shredding paper to investigative research on expert witnesses.
 					</p>
@@ -52,19 +52,18 @@
 			</div>
 			<div class="left_items">
 				<div class="portfolio_text_box align_left">
-					<p class="italic_lato top_of_container_text">What I Did</p>
+					<p class="italic_courier top_of_container_text">What I Did</p>
 					<p>
 						 A lot changed since my work as a summer intern, including my career direction which gravitated away from Law and into Web Engineering/Computer Science. From then to now, I never expected that I'd one day rebuild their <a class="underline_link" href="http://wresq.com/" title="William Ricigliano, P.C. Website" target="_blank">website</a> and design their logo, but it was an amazing opportunity to do so.
 					</p>
 				</div>
 
 				<div class="portfolio_text_box portfolio_skill_list align_left">
-					<p class="italic_lato">Skills Used</p>
+					<p class="italic_courier">Skills Used</p>
 						<h2>HTML</h2>
 						<h2>CSS</h2>
 						<h2>Javascript</h2>
 						<h2>JQuery</h2>
-						<h2>Google Analytics</h2>
 				</div>
 			</div>
 		</div>
@@ -110,7 +109,7 @@
 		<div id="footer_contact_box">
 			<img id="footer_envelope" src="http://i.imgur.com/d5mN9lB.png?2" title="I designed this!" alt="Flat Envelope"/>
 			<h1>Say Hi!</h1>
-			<h2>Or other things.</h2>
+			<p>Or other things.</p>
 			<button id="email_me_button"><a href="mailto:cjr6734@yahoo.com">Email Me!</a></button>
 		</div>
 		<div id="footer_lower_box">
