Updates to ellevest page and home page

--- a/index.html
+++ b/index.html
@@ -34,10 +34,18 @@
 	<div class="lander_container_new">
 		<div class="vertical_center">
 			<h1 id="lander_greeting1_new">HEY!</h1>
-			<h3 id="lander_greeting2_new">I'm Connor, a Web Engineer and Graphic Designer based in New York. I love taking part in work where I can blend meaningful design with well-written code to build great things. Check out my portfolio below, and my <a class="underline_link" href="http://connorrowland.github.io/imgs/resume.pdf" title="Connor Rowland Design and Engineering Resume">resume</a> to get a better guage of my presence in design and engineering.</p></h3>
+			<h3 id="lander_greeting2_new">I'm Connor, a Web Engineer and Graphic Designer based in New York. I love taking part in work where I can blend meaningful design with well-written code to build great things. Check out both my portfolio and my <a class="underline_link" href="http://connorrowland.github.io/imgs/resume.pdf" title="Connor Rowland Design and Engineering Resume">resume</a> to get a better understanding of my presence in design and engineering.</p></h3>
 		</div>
 	</div>
 	<div id="portfolio_container_new">
+		<a href="ellevest.html" title="">
+			<div class="portfolio_preview_updates proj3">
+				<div class="portfolio_preview_bio">
+					<h2>Ellevest</h2>
+					<p>Freelance Engineering work done for a women's investing platform</p>
+				</div>
+			</div>
+		</a>
 		<a href="wresq.html" title="">
 			<div class="portfolio_preview_updates proj1">
 				<div class="portfolio_preview_bio">
@@ -51,14 +59,6 @@
 				<div class="portfolio_preview_bio">
 					<h2>iPhone Reproduction</h2>
 					<p>An interactive iPhone made with HTML, CSS, and JavaScript</p>
-				</div>
-			</div>
-		</a>
-		<a href="ellevest.html" title="">
-			<div class="portfolio_preview_updates proj3">
-				<div class="portfolio_preview_bio">
-					<h2>Ellevest</h2>
-					<p>Freelance Engineering work done for a women's investing platform</p>
 				</div>
 			</div>
 		</a>
