--- a/wresq.html
+++ b/wresq.html
@@ -39,7 +39,7 @@
 				<div class="portfolio_text_box align_right">
 					<p class="italic_courier">When</p>
 					<p>
-						Fall 2015 &ndash; Present.
+						October 2015 &ndash; May 2016.
 					</p>
 				</div>
 				
