--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<div class="portfolio_preview_updates proj3">
 				<div class="portfolio_preview_bio">
 					<h2>Ellevest</h2>
-					<p>Freelance Engineering work done for a women's investing platform</p>
+					<p>Front and Backend work done for a women's investing platform</p>
 				</div>
 			</div>
 		</a>
@@ -50,7 +50,7 @@
 			<div class="portfolio_preview_updates proj1">
 				<div class="portfolio_preview_bio">
 					<h2>Law Firm Website</h2>
-					<p>Engineering and design work done for a law firm based in NYC</p>
+					<p>Web Engineering and design work done for a law firm based in NYC</p>
 				</div>
 			</div>
 		</a>
@@ -66,7 +66,7 @@
 			<div class="portfolio_preview_updates proj4">
 				<div class="portfolio_preview_bio">
 					<h2>Let's Meet</h2>
-					<p>Engineering Project made at General Assembly in NYC</p>
+					<p>Fullstack Project made at General Assembly in NYC</p>
 				</div>
 			</div>
 		</a>
