Updates to wresq page

--- a/wresq.html
+++ b/wresq.html
@@ -70,7 +70,7 @@
 		<div class="fifty_spacer"></div>
 		<a href="http://wresq.com/about.html" title="William Ricigliano, P.C. Website" target="_blank"><img class="larger_project_image" src="imgs/wresq-mock.png" alt="William Ricigliano, P.C. Website"/></a>
 
-		<div class="side_by_side">
+		<div class="side_by_side wresq_old_screenshots">
 			<div class="item">
 				<h2>Old Site</h2>
 				<img src="imgs/wresq-old-site.png" alt="Old William Ricigliano Website" title="Old William Ricigliano Website" class="wresq_bef_aft">
