Updating date in ellevest page

--- a/ellevest.html
+++ b/ellevest.html
@@ -40,7 +40,7 @@
 				<div class="portfolio_text_box align_right">
 					<p class="italic_courier">When</p>
 					<p>
-						September 2015 &ndash; Present.
+						September 2015 &ndash; August 2016.
 					</p>
 				</div>
 				
