--- a/baruch.html
+++ b/baruch.html
@@ -7,17 +7,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="A Web Engineering and Graphic Design portfolio website for me, Connor, based in New York City.">
 	<meta name="author" content="Connor Rowland">
-	<meta name="keywords" content="web developer, nyc, developer, manhattan, new york, connor rowland, graphic designer, developer new york, new york web developer, new york web engineer, web developer new york, web engineer, Connor John Rowland, baruch college">
+	<meta name="keywords" content="web developer, web engineer, nyc developer, developer, manhattan, new york, connor rowland, graphic designer, developer new york, new york web developer, new york web engineer, web developer new york, web engineer, Connor John Rowland, baruch college, Connor, Rowland">
 	<!-- Scripts and Links -->
 	<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-		  ga('create', 'UA-67845188-1', 'auto');
-		  ga('send', 'pageview');
-
+	  ga('create', 'UA-67845188-1', 'auto');
+	  ga('send', 'pageview');
 	</script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 	<script src="app.js"></script>
@@ -49,7 +48,7 @@
 			<img id="footer_envelope" src="http://i.imgur.com/d5mN9lB.png?2" title="I designed this!" alt="Flat Envelope"/>
 			<h1>Say Hi!</h1>
 			<p>Or other things.</p>
-			<button id="email_me_button"><a href="mailto:cjr6734@yahoo.com">Email Me!</a></button>
+			<button id="email_me_button"><a href="mailto:connor.rowland34@gmail.com">Email Me!</a></button>
 		</div>
 		<div id="footer_lower_box">
 			<nav id="footer_nav_bar">
@@ -58,11 +57,11 @@
 				<a href="imgs/resume.pdf">Resume</a>
 			</nav>
 			<div id="footer_links">
-				<a href="mailto:cjr6734@yahoo.com"><img src="http://i.imgur.com/TbL4up7.png?1" alt="Email Me"></a>
+				<a href="mailto:connor.rowland34@gmail.com"><img src="http://i.imgur.com/TbL4up7.png?1" alt="Email Me"></a>
 				<a target="_blank" href="https://github.com/connorrowland"><img src="http://i.imgur.com/z0VVNbs.png?1" alt="Github"></a>
 				<a target="_blank" href="https://www.linkedin.com/in/connorrowland"><img src="http://i.imgur.com/BYqAuxN.png?1" alt="LinkedIn"></a>
 			</div>
-			<p id="footer_text">Connor Rowland<br>New York, NY<br>Cjr6734@yahoo.com<br>(845)548-2033</p>
+			<p id="footer_text">Connor Rowland<br>New York, NY<br>connor.rowland34@gmail.com</p>
 		</div>
 	</footer>
 </body>
