--- a/ellevest.html
+++ b/ellevest.html
@@ -93,7 +93,7 @@
 		<div class="fifty_spacer"></div>
 
 		<div class="next_project_container">
-			<a href="letsmeet.html" class="next_project_link"><strong>Next Project</strong>: Let's Meet</a>
+			<a href="wresq.html" class="next_project_link"><strong>Next Project</strong>: Law Firm Website</a>
 		</div>
 	</div>
 
@@ -103,7 +103,7 @@
 			<img id="footer_envelope" src="http://i.imgur.com/d5mN9lB.png?2" title="I designed this!" alt="Flat Envelope"/>
 			<h1>Say Hi!</h1>
 			<p>Or other things.</p>
-			<button id="email_me_button"><a href="mailto:cjr6734@yahoo.com">Email Me!</a></button>
+			<button id="email_me_button"><a href="mailto:connor.rowland34@gmail.com">Email Me!</a></button>
 		</div>
 		<div id="footer_lower_box">
 			<nav id="footer_nav_bar">
@@ -112,11 +112,11 @@
 				<a href="imgs/resume.pdf">Resume</a>
 			</nav>
 			<div id="footer_links">
-				<a href="mailto:cjr6734@yahoo.com"><img src="http://i.imgur.com/TbL4up7.png?1" alt="Email Me"></a>
+				<a href="mailto:connor.rowland34@gmail.com"><img src="http://i.imgur.com/TbL4up7.png?1" alt="Email Me"></a>
 				<a target="_blank" href="https://github.com/connorrowland"><img src="http://i.imgur.com/z0VVNbs.png?1" alt="Github"></a>
 				<a target="_blank" href="https://www.linkedin.com/in/connorrowland"><img src="http://i.imgur.com/BYqAuxN.png?1" alt="LinkedIn"></a>
 			</div>
-			<p id="footer_text">Connor Rowland<br>New York, NY<br>Cjr6734@yahoo.com<br>(845)548-2033</p>
+			<p id="footer_text">Connor Rowland<br>New York, NY<br>connor.rowland34@gmail.com</p>
 		</div>
 	</footer>
 </body>
