--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<div class="lander_container_new">
 		<div class="vertical_center">
 			<h1 id="lander_greeting1_new">HEY!</h1>
-			<h3 id="lander_greeting2_new">I'm Connor, a Web Engineer and Graphic Designer based in New York. I love taking part in work where I can blend meaningful design with well-written code to build great things. Check out both my portfolio and my <a class="underline_link" href="http://connorrowland.github.io/imgs/resume.pdf" title="Connor Rowland Design and Engineering Resume">resume</a> to get a better understanding of my presence in design and engineering.</p></h3>
+			<h3 id="lander_greeting2_new">I'm Connor, a Web Engineer and Graphic Designer based in New York. I love taking part in work where I can blend meaningful design with well-written code to build great things. Check out both my portfolio and my <a class="underline_link" href="http://connorrowland.github.io/imgs/resume.pdf" title="Connor Rowland Design and Engineering Resume">resume</a> to get a better understanding of my presence in design and engineering. If you'd like to contact me, click <a class="underline_link" href="mailto:connor.rowland34@gmail.com">here</a>.</h3>
 		</div>
 	</div>
 	<div id="portfolio_container_new">
@@ -105,10 +105,10 @@
 
 	<footer id="home_footer">
 		<div id="footer_contact_box">
-			<img id="footer_envelope" src="http://i.imgur.com/d5mN9lB.png?2" title="I designed this!" alt="Flat Envelope"/>
+			<img id="footer_envelope" src="http://i.imgur.com/d5mN9lB.png?2" title="I made this!" alt="Flat Envelope"/>
 			<h1>Say Hi!</h1>
 			<p>Or other things.</p>
-			<button id="email_me_button"><a href="mailto:cjr6734@yahoo.com">Email Me!</a></button>
+			<button id="email_me_button"><a href="mailto:connor.rowland34@gmail.com">Email Me!</a></button>
 		</div>
 		<div id="footer_lower_box">
 			<nav id="footer_nav_bar">
@@ -117,11 +117,11 @@
 				<a href="imgs/resume.pdf">Resume</a>
 			</nav>
 			<div id="footer_links">
-				<a href="mailto:cjr6734@yahoo.com"><img src="http://i.imgur.com/TbL4up7.png?1" alt="Email Me"></a>
+				<a href="mailto:connor.rowland34@gmail.com"><img src="http://i.imgur.com/TbL4up7.png?1" alt="Email Me"></a>
 				<a target="_blank" href="https://github.com/connorrowland"><img src="http://i.imgur.com/z0VVNbs.png?1" alt="Github"></a>
 				<a target="_blank" href="https://www.linkedin.com/in/connorrowland"><img src="http://i.imgur.com/BYqAuxN.png?1" alt="LinkedIn"></a>
 			</div>
-			<p id="footer_text">Connor Rowland<br>New York, NY<br>Cjr6734@yahoo.com<br>(845)548-2033</p>
+			<p id="footer_text">Connor Rowland<br>New York, NY<br>connor.rowland34@gmail.com</p>
 		</div>
 	</footer>
 </body>
