--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<div class="portfolio_preview_updates proj3">
 				<div class="portfolio_preview_bio">
 					<h2>Ellevest</h2>
-					<p>Front and Backend work done for a women's investing platform</p>
+					<p>Front end and Back end work done for a women's investing platform</p>
 				</div>
 			</div>
 		</a>
