Updating mobile styles

--- a/baruch.html
+++ b/baruch.html
@@ -31,7 +31,7 @@
 		<a href="imgs/resume.pdf">Resume</a>
 		<a id="contact_link">Contact</a>
 	</nav>
-	<div id="porfolio_container">
+	<div id="portfolio_container">
 		<h1 id="project_name_text">Baruch College Play</h1>
 		<p id="project_description_text">For my Graphic Design class focusing on Typography, we were assigned to create a poster design for the school play&mdash; Tennessee Williams's <i>Suddenly Last Summer</i>.</p>
 		<div class="fifty_spacer"></div>
