--- a/flat-design.html
+++ b/flat-design.html
@@ -31,7 +31,7 @@
 		<a href="imgs/resume.pdf">Resume</a>
 		<a id="contact_link">Contact</a>
 	</nav>
-	<div id="porfolio_container">
+	<div id="portfolio_container">
 		<h1 id="project_name_text">Flat Design</h1>
 		<p id="project_description_text">A series of different icons and illustrations informed by the techniques of flat design.</p>
 		<img class="larger_project_image" src="imgs/hammer-design-flat.png" alt="Flat Cartoon of Tools." />
