--- a/magazines.html
+++ b/magazines.html
@@ -32,7 +32,7 @@
 		<a href="imgs/resume.pdf">Resume</a>
 		<a id="contact_link">Contact</a>
 	</nav>
-	<div id="porfolio_container">
+	<div id="portfolio_container">
 		<h1 id="long_project_name_text">Magazine Layouts</h1>
 		<p id="project_description_text">Below are projects that I've completed in Graphic Design courses that I've enrolled in dealing with magazine spreads and layouts.</p>
 		<div class="fifty_spacer"></div>
