--- a/pride.html
+++ b/pride.html
@@ -32,7 +32,7 @@
 		<a href="imgs/resume.pdf">Resume</a>
 		<a id="contact_link">Contact</a>
 	</nav>
-	<div id="porfolio_container">
+	<div id="portfolio_container">
 		<h1 id="long_project_name_text">Pride March T-Shirt</h1>
 		<p id="project_description_text">A T-Shirt design for the 2015 NYC Pride March.</p>
 		<div class="fifty_spacer"></div>
