--- a/wresq.html
+++ b/wresq.html
@@ -32,7 +32,7 @@
 		<a href="imgs/resume.pdf">Resume</a>
 		<a id="contact_link">Contact</a>
 	</nav>
-	<div id="porfolio_container">
+	<div id="portfolio_container">
 		<h1 id="project_name_text">Law Firm Website</h1>
 		<div class="portfolio_inner_text">
 			<div class="right_items">
