--- a/iphone.html
+++ b/iphone.html
@@ -32,7 +32,7 @@
 		<a href="imgs/resume.pdf">Resume</a>
 		<a id="contact_link">Contact</a>
 	</nav>
-	<div id="porfolio_container">
+	<div id="portfolio_container">
 		<h1 id="long_project_name_text">iPhone Reproduction</h1>
 		<p id="project_description_text">A replica of the Apple iPhone 6, built with HTML, CSS, Javascript and JQuery. Click the home button to turn the phone on!</p>
 		<div class="fifty_spacer"></div>
