--- a/trilogy.html
+++ b/trilogy.html
@@ -35,7 +35,7 @@
 		<a href="imgs/resume.pdf">Resume</a>
 		<a id="contact_link">Contact</a>
 	</nav>
-	<div id="porfolio_container">
+	<div id="portfolio_container">
 		<h1 id="long_project_name_text">Trilogy Educational Services</h1>
 		<p id="project_description_text">For a freelance project with Trilogy Educational Services, I was instructed to make graphics to explain various Git processes. Below are the graphics that I made, which are now used as learning materials for a coding bootcamp.</p>
 		<div class="fifty_spacer"></div>
