Removing lets meet bc it broke :(

--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
 				</div>
 			</div>
 		</a>
-		<a href="letsmeet.html" title="">
+<!-- 		<a href="letsmeet.html" title="">
 			<div class="portfolio_preview_updates proj4">
 				<div class="portfolio_preview_bio">
 					<h2>Let's Meet</h2>
 					<p>Fullstack Project made at General Assembly in NYC</p>
 				</div>
 			</div>
-		</a>
+		</a> -->
 		<a href="trilogy.html" title="">
 			<div class="portfolio_preview_updates proj5">
 				<div class="portfolio_preview_bio">
